--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,660 @@
-header{
-    height: 158px;
+#start {
+  background: #007878;
 }
 
-.navbar{
-    height: 100%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+.header_top {
+  width: 100%;
+  height: 4.8rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.headtext {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.headtext .contact {
+  display: flex;
+  align-items: center;
+  gap: 0.8rem;
+}
+.headtext .contact span {
+  color: white;
+  font-family: Poppins;
+  font-size: 14px;
+  font-weight: 500;
+  opacity: 0.7;
+}
+.headtext .service {
+  height: 50%;
+  font-family: Poppins;
+  font-size: 14px;
+  font-weight: 500;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 1.6rem;
+  padding: 1.6rem 0 1.6rem 0;
+  opacity: 0.7;
+}
+.headtext .service :nth-child(2) {
+  border-left: 1px solid white;
+  border-right: 1px solid white;
+  padding: 0 0.8rem 0 0.8rem;
+}
+.headtext .service a {
+  color: white;
+}
+
+.mynavbar {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px 22px 0px 0px;
+  margin-bottom: 50px;
+  text-align: center;
+}
+.mynavbar .logo {
+  font-family: Palanquin;
+  font-size: 40px;
+  font-weight: 700;
+  line-height: 40px;
+  text-align: left;
+}
+.mynavbar .wrapper .dropdown-menu,
+.newB {
+  font-family: Poppins;
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 16.8px;
+  text-align: left;
+  text-underline-position: from-font;
+  text-decoration-skip-ink: none;
+}
+.mynavbar .nav_list {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  margin: 0;
+}
+.nav_list .nav_list-item {
+  list-style: none;
+}
+a {
+  text-decoration: none;
+  color: black;
+}
+.mynavbar .wrapper {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  gap: 10px;
+}
+
+.dropdown-menu {
+  max-width: 150px !important;
+  position: relative;
+  z-index: 10;
+}
+.mynavbar .wrapper .username {
+  border: none;
+  padding: 6px 10px;
+  border-radius: 5px;
+  background: transparent;
+}
+.mynavbar .wrapper .basketIcon {
+  position: relative;
+}
+.mynavbar .wrapper a sup {
+  font-size: 13px;
+  position: absolute;
+  top: 3px;
+  right: -15px;
+}
+
+.control-panel {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 50px;
+}
+
+.control-panel .search-box {
+  display: flex;
+  align-items: center;
+}
+.search-box {
+  width: 504px;
+  height: 48px;
+  position: relative;
+}
+.search-btn {
+  top: 6px;
+  right: 0px;
+  border: none !important;
+  position: absolute;
+}
+.search-box input {
+  width: 100%;
+  border: none;
+  height: 48px;
+  background: #f7f9fc;
+
+  padding: 5px;
+  padding-left: 15px;
+  outline: none;
+}
+.search-box button {
+  border: 1px solid #a2a1a1;
+  border-left: none;
+  padding: 5px 15px;
+  border-radius: 0 !important;
+}
+
+/* sersch */
+
+.search-result {
+  display: flex;
+  position: absolute;
+  background-color: white;
+}
+.search-image {
+  display: flex;
+  width: 30px;
+
+  height: 30px;
+}
+.search-image img {
+  width: 30px;
+
+  height: 30px;
+}
+.search-result-item {
+  display: flex;
+  justify-content: space-between;
+  list-style: decimal;
+  padding: 12px 16px;
+  font-size: 14px;
+  color: #333;
+  cursor: pointer;
+  transition: background-color 0.3s ease, padding 0.2s ease;
+  border-bottom: 1px solid #f0f0f0;
+  background-color: #fff;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+
+.search-result-item:hover {
+  background-color: #f5f5f5;
+  padding-left: 20px;
+  color: #007bff;
+}
+.search-result-item:focus {
+  outline: none;
+  background-color: #e8e8e8;
+}
+
+.products {
+  width: 80rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-family: Poppins;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 27.2px;
+  text-align: left;
+  cursor: pointer;
+}
+
+.sliderContainer {
+  background: #ffe2e0;
+  margin-top: 24px;
+  overflow: hidden;
+  position: relative;
+  height: 630px;
+}
+
+.slides {
+  display: flex;
+}
+
+.slide {
+  min-width: 100%;
+  height: 500px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 60px 0px 0px 50px;
+}
+
+.prev,
+.next {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  font-size: 30px;
+  cursor: pointer;
+}
+.adminClass {
+  display: none;
+}
+
+.next {
+  right: 15px;
+}
+.prev {
+  left: 15px;
+}
+.womBagImg {
+  padding-top: 40px;
+}
+
+.start {
+  gap: 4rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.start span {
+  font-family: Rubik;
+  font-size: 24px;
+  font-weight: 500;
+  line-height: 40.8px;
+  text-align: left;
+  color: #df4244;
+}
+.start h1 {
+  font-family: Rubik;
+  font-size: 40px;
+  font-weight: 700;
+  line-height: 68px;
+  text-align: left;
+  color: #212121;
+}
+.start p {
+  font-family: Poppins;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 27.2px;
+  text-align: left;
+  color: rgba(33, 33, 33, 0.7490196078);
+}
+.start button {
+  width: 192px;
+  height: 52px;
+  top: 551px;
+  left: 201px;
+  gap: 0px;
+  border-radius: 8px;
+  opacity: 0px;
+  background: #206363;
+  color: white;
+  border: none;
+  cursor: pointer;
+}
+.main {
+  padding: 9.9rem 0 18.7rem 0;
+}
+.secImg {
+  width: 500px;
+  height: 500px;
+}
+
+#payment {
+  background-color: #f7f7f7;
+  height: 144px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.bagChoose {
+  margin-top: 80px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+}
+.bagChoose .bagcard {
+  width: 264px;
+  height: 162px;
+  top: 1014px;
+  left: 201px;
+  gap: 0px;
+  opacity: 0px;
+  background: #f5f5f5;
+}
+.bagChoose .bagcard .text {
+  position: absolute;
+  font-family: Poppins;
+  font-size: 18px;
+  font-weight: 500;
+  padding: 2rem;
+}
+.bagChoose img {
+  background: #f5f5f5;
+}
+.featuredStart {
+  margin-top: 96px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 23px;
+}
+.textLeft {
+  text-align: right;
+}
+.viewAllh {
+  font-family: Rubik;
+  font-size: 32px;
+  font-weight: 500;
+  line-height: 54.4px;
+  text-align: left;
+  text-underline-position: from-font;
+  text-decoration-skip-ink: none;
+}
+.allProduct {
+  text-align: center;
+}
+@media (max-width: 992px) {
+  .wrapper {
+    margin-top: 20px;
+    margin-right: 20px;
+  }
+  .products {
+    display: none;
+  }
+}
+@media (max-width: 992px) {
+  .slide {
+    height: none;
+  }
+  .bagsIMG {
+    display: none;
+  }
+}
+@media (max-width: 992px) {
+  #payment {
+    height: 194px;
+  }
+}
+
+.viewCard {
+  margin-top: 3px;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 23px;
+  justify-content: flex-start;
+}
+
+.cards {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 23px;
+  justify-content: flex-start;
+}
+
+.card {
+  background: #f9f9f9;
+
+  width: 360px;
+  border-radius: 8px;
+  transition: transform 0.3s, box-shadow 0.3s;
+  cursor: pointer;
+  position: relative;
+  border: none;
+}
+
+.card:hover {
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+}
+.card-image {
+  width: 100%;
+  height: 243px;
+  padding: 15px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.card-image img {
+  width: 80%;
+  height: 80%;
+  object-fit: cover;
+}
+
+
+.card-content {
+  padding: 20px;
+}
+
+.card-title {
+  font-family: Rubik;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 27.2px;
+  text-align: left;
+  text-underline-position: from-font;
+  text-decoration-skip-ink: none;
+}
+
+.card-category {
+  font-size: 14px;
+  color: #555555;
+  margin-bottom: 15px;
+}
+
+.card-description {
+  font-size: 14px;
+  line-height: 1.6;
+  color: #666666;
+  margin-bottom: 20px;
+}
+
+.card-footer {
+  background: #f9f9f9;
+  border: none;
+  display: flex;
+  padding: 0px;
+  align-items: center;
+  gap: 10px;
+}
+
+.card-price {
+  font-family: Poppins;
+  font-size: 20px;
+  font-weight: 600;
+  line-height: 34px;
+  text-align: left;
+  text-underline-position: from-font;
+  text-decoration-skip-ink: none;
+
+  color: #f75145;
+}
+
+.card-rating {
+  font-size: 14px;
+  color: #ff9800;
+}
+
+.card-rating span:last-child {
+  color: #999999;
+  font-size: 12px;
+  margin-left: 5px;
+}
+
+.card-heart {
+  font-size: 20px;
+  position: absolute;
+  top: 15px;
+  right: 15px;
+  color: #df4244;
+}
+.card-heart:hover {
+  color: #df4244;
+}
+
+.add-to-cart {
+  border: 1px solid #212121;
+  text-align: center;
+  background-color: transparent;
+  color: #212121;
+  margin: 20px;
+  text-transform: capitalize;
+  font-family: Poppins;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 27.2px;
+}
+.add-to-cart:hover {
+  background: #212121;
+  color: white;
+  border: 1px solid #212121;
+}
+.starArea {
+  display: flex;
+  padding: 20px 0px 0px 20px;
+  gap: 3px;
+}
+.starCard {
+  color: #ffdd45;
+  font-size: 13px;
+}
+.az,
+.za {
+  color: black;
+  font-family: Poppins;
+  font-size: 16px;
+  width: 100%;
+  border-radius: 0px;
+  background-color: white !important;
+  border: none;
+}
+.za:hover {
+  border: none !important;
+  background-color: #565e64 !important;
+  color: white;
+}
+.az:hover {
+  border: none !important;
+  background-color: #565e64 !important;
+  color: white;
+}
+.low-to-high,
+.high-to-low {
+  color: black;
+  font-family: Poppins;
+  font-size: 16px;
+  width: 100%;
+  border-radius: 0px;
+  background-color: white !important;
+  border: none;
+}
+.low-to-high:hover {
+  border: none !important;
+  background-color: #565e64 !important;
+  color: white;
+}
+.high-to-low:hover {
+  border: none !important;
+  background-color: #565e64 !important;
+  color: white;
+}
+footer {
+  margin-top: 128px;
+  background: #f7f7f9;
+}
+.footHead {
+  display: flex;
+  align-items: center;
+  margin-top: 39px;
+  margin-bottom: 39px;
+}
+.footHeadText {
+  font-family: Palanquin;
+  font-size: 40px;
+  font-weight: 700;
+  line-height: 40px;
+  text-align: left;
+  text-underline-position: from-font;
+  text-decoration-skip-ink: none;
+}
+#footBottom {
+  border-top: 1px solid #27314226;
+  margin-bottom: 80px;
+}
+.footBottomLeft {
+  margin-top: 56px;
+}
+.botText {
+  width: 326px;
+  font-family: Poppins;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 27.2px;
+  text-align: left;
+  text-underline-position: from-font;
+  text-decoration-skip-ink: none;
+  opacity: 0.7;
+}
+.message,
+.phone {
+  margin-top: 35px;
+  display: flex;
+  gap: 10px;
+  opacity: 0.7;
+}
+
+.sendMessege {
+  margin-top: 35px;
+}
+.footBottomRight {
+  margin-top: 56px;
+}
+
+.dark {
+  font-family: Rubik;
+  font-size: 18px;
+  font-weight: 500;
+  line-height: 30.6px;
+  text-align: left;
+  text-underline-position: from-font;
+  text-decoration-skip-ink: none;
+  color: #212121;
+}
+.light {
+  margin-top: 20px;
+  font-family: Poppins;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 19.2px;
+  text-align: left;
+  text-underline-position: from-font;
+  text-decoration-skip-ink: none;
+  color: #212121bf;
+}
+.follow {
+  margin-left: 32px;
+}
+#footLast {
+  background-color: white;
+  margin-top: 25px;
+  padding-top: 30px;
+  padding-bottom: 30px;
+}
+.test {
+  display: flex;
+  gap: 3px;
+
+  font-size: 16px;
+}
+.font {
+  font-size: 20px;
+  margin-right: 3px;
 }
