--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,12 @@
 #start {
+  height: 48px;
   background: #007878;
+  display: flex;
+  align-items: center;
 }
 
 .header_top {
   width: 100%;
-  height: 4.8rem;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -209,14 +211,6 @@ a {
   line-height: 27.2px;
   text-align: left;
   cursor: pointer;
-}
-
-.sliderContainer {
-  background: #ffe2e0;
-  margin-top: 24px;
-  overflow: hidden;
-  position: relative;
-  height: 630px;
 }
 
 .slides {
