--- a/assets/css/register.css
+++ b/assets/css/register.css
@@ -10,7 +10,6 @@
   align-items: center;
   justify-content: center;
   width: 552px;
-  height: 604px;
   padding: 20px;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
   background-color: white;
@@ -20,15 +19,6 @@ h1 {
   margin-bottom: 20px;
 }
 
-.submit{
-    width: 100%;
-    background-color: #F75145;
-    height: 52px;
-    color: white;
-    border: none;
-    border-radius: 8px;
-    font-size: 16px;
-}
 .logNextReg{
   margin-top: 10px;
   text-align: center;
@@ -44,17 +34,15 @@ h1 {
   text-decoration: none;
   color: #000;
 }
-.titleLog{
-  width: 360px;
-  letter-spacing: 1.5;
-  text-align: center;
-  font-family: Poppins;
-font-size: 16px;
-font-weight: 400;
-line-height: 27.2px;
+
+.form-label{
+  font-weight: bold;
 }
 
+#name,
+#surname,
 #username,
+#email,
 #password{
   width: 340px;
   height: 48px;
@@ -62,9 +50,13 @@ line-height: 27.2px;
   border-radius: 8px;
 }
 
-.custom-toast{
-  display: flex;
-  align-items: center;
-  height: 60px;
-  border-radius: 10px;
+.submit{
+  margin-top: 30px;
+  width: 100%;
+  background-color: #F75145;
+  height: 52px;
+  color: white;
+  border: none;
+  border-radius: 8px;
+  font-size: 16px;
 }
