--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -20,49 +20,48 @@ h1 {
   margin-bottom: 20px;
 }
 
-.submit{
-    width: 100%;
-    background-color: #F75145;
-    height: 52px;
-    color: white;
-    border: none;
-    border-radius: 8px;
-    font-size: 16px;
+.submit {
+  width: 100%;
+  background-color: #f75145;
+  height: 52px;
+  color: white;
+  border: none;
+  border-radius: 8px;
+  font-size: 16px;
 }
-.logNextReg{
+.logNextReg {
   margin-top: 10px;
   text-align: center;
   font-family: Poppins;
   font-size: 16px;
   font-weight: bold;
   line-height: 23.8px;
- color: #555555;
-
+  color: #555555;
 }
-.linkReg{
+.linkReg {
   font-weight: bold;
   text-decoration: none;
   color: #000;
 }
-.titleLog{
+.titleLog {
   width: 360px;
   letter-spacing: 1.5;
   text-align: center;
   font-family: Poppins;
-font-size: 16px;
-font-weight: 400;
-line-height: 27.2px;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 27.2px;
 }
 
 #username,
-#password{
+#password {
   width: 340px;
   height: 48px;
   border: 1px solid rgba(44, 44, 44, 0.25);
   border-radius: 8px;
 }
 
-.custom-toast{
+.custom-toast {
   display: flex;
   align-items: center;
   height: 60px;
